--- a/Chal-Copy1.ipynb
+++ b/Chal-Copy1.ipynb
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "0584d214",
    "metadata": {},
    "outputs": [],
@@ -1656,19 +1656,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "84879e57",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 40 candidates, totalling 200 fits\n",
+      "{'alpha': 0.1, 'fit_prior': True}\n",
+      "CPU times: user 325 ms, sys: 116 ms, total: 442 ms\n",
+      "Wall time: 7.32 s\n"
      ]
     }
    ],
@@ -1690,8 +1689,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "034b54a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score on training set: 0.9104420102383443\n",
+      "CPU times: user 64.7 ms, sys: 4.11 ms, total: 68.8 ms\n",
+      "Wall time: 123 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "\n",
+    "nb = MultinomialNB(alpha=0.1,fit_prior=True)\n",
+    "\n",
+    "nb.fit(X_train,Y_train)\n",
+    "\n",
+    "X_train_prediction = nb.predict(X_train)\n",
+    "\n",
+    "print('Accuracy score on training set:',accuracy_score(X_train_prediction, Y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0f16a65b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.80      0.85      4324\n",
+      "           1       0.78      0.89      0.83      3463\n",
+      "\n",
+      "    accuracy                           0.84      7787\n",
+      "   macro avg       0.84      0.85      0.84      7787\n",
+      "weighted avg       0.85      0.84      0.84      7787\n",
+      "\n",
+      "CPU times: user 28.1 ms, sys: 21 µs, total: 28.1 ms\n",
+      "Wall time: 33.6 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "X_test_prediction = nb.predict(X_test)\n",
+    "\n",
+    "print(classification_report(X_test_prediction, Y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3e110ce",
    "metadata": {},
    "outputs": [],
    "source": []
